--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,16 @@
 				<%= image_tag "timeflux_logo.jpg", :alt => "TimeFlux logo", :id => "timeflux_logo" %>
 			</div>
 			<div id="menu">
-				<span class="menu_item"><%= link_to "Time Entry", root_url, :class => "menu_link" %></span>
-				<span class="menu_item"><%= link_to "Review Month", nil, :class => "menu_link" %></span>
-				<span class="menu_item"><%= link_to "Reports", nil, :class => "menu_link" %></span>
-				<span class="menu_item"><%= link_to "Activities", activities_url, :class => "menu_link" %></span>
-				<span class="menu_item"><%= link_to "People", nil, :class => "menu_link" %></span>
-				<span class="menu_item"><%= link_to "Logout", nil, :class => "menu_link" %></span>
+				<% if defined? @current_user_session -%>
+					<span class="menu_item"><%= link_to "Time Entry", week_entries_url, :class => "menu_link" %></span>
+					<span class="menu_item"><%= link_to "Review Month", nil, :class => "menu_link" %></span>
+					<span class="menu_item"><%= link_to "Reports", nil, :class => "menu_link" %></span>
+					<span class="menu_item"><%= link_to "Activities", activities_url, :class => "menu_link" %></span>
+					<span class="menu_item"><%= link_to "People", nil, :class => "menu_link" %></span>
+					<span class="menu_item"><%= link_to "Logout", {:controller => "user_sessions", :action => "destroy"}, :method => :delete, :class => "menu_link" %></span>
+			    <% else -%>
+					<span class="menu_item"><%= link_to "Login", new_user_session_url, :class => "menu_link" %></span>
+				<% end -%>
 			</div>
 			<div id="main">
 				<div class="content">
