clean up removed (as in moved) view/report/user_report, and removed a 'reqire' from unit test

--- a/app/views/reports/show_table.html.erb
+++ b/app/views/reports/show_table.html.erb
@@ -1,9 +1,7 @@
 
 <h3>Table</h3>
 
-<p><%= @debug %></p>
-
-<%= if @debug then @debug.class end %>
+<p><%= @debug %>  (<%= if @debug then @debug.class end %>)</p>
 
 <%= @table.to_html() -%>
  
