--- a/app/views/reports/user.html.erb
+++ b/app/views/reports/user.html.erb
@@ -7,8 +7,8 @@
 
 <% else %>
 
- <%= link_to "pdf", :action => "user_report", :format => "pdf"%>
- <%= link_to "csv", :action => "user_report", :format => "csv"%>
+ <%= link_to "pdf", :action => "user", :format => "pdf"%>
+ <%= link_to "csv", :action => "user", :format => "csv"%>
  <%= @table.to_html() -%>
 <%  end %>
   
