Added month field til time_entries table

--- a/app/views/week_entries/new.html.erb
+++ b/app/views/week_entries/new.html.erb
@@ -9,6 +9,7 @@
 		<%= week_entry_form.hidden_field :week_number %>
 		<table>
 			<% week_entry_form.fields_for :time_entries do |time_entry_form| -%>
+				<%= time_entry_form.hidden_field :month %>
 				<%= time_entry_form.hidden_field :date %>
 				<tr>
 				<td>
