--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 			</div>
 			<div id="menu">
 				<% if defined? @current_user_session -%>
-					<span class="menu_item"><%= link_to "Time Entry", week_entries_url, :class => "menu_link" %></span>
+					<span class="menu_item"><%= link_to "Time Entry", time_entries_url, :class => "menu_link" %></span>
 					<span class="menu_item"><%= link_to "Review Month", nil, :class => "menu_link" %></span>
 					<span class="menu_item"><%= link_to "Reports", reports_url, :class => "menu_link" %></span>
 					<span class="menu_item"><%= link_to "Activities", activities_url, :class => "menu_link" %></span>
