--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :firstame %><br />
+    <%= f.label :firstname %><br />
     <%= f.text_field :firstname %>
   </p>
   <p>
@@ -19,7 +19,7 @@
     <%= f.label :password %><br />
     <%= f.password_field :password %>
   </p>
-    <p>
+  <p>
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation %>
   </p>
