--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 			<div id="menu">
 				<% if defined? @current_user_session -%>
 					<span class="menu_item"><%= link_to "Time Entry", week_entries_url, :class => "menu_link" %></span>
-					<span class="menu_item"><%= link_to "Review Month", nil, :class => "menu_link" %></span>
+					<span class="menu_item"><%= link_to "Review Month", month_url, :class => "menu_link" %></span>
 					<span class="menu_item"><%= link_to "Reports", reports_url, :class => "menu_link" %></span>
 					<span class="menu_item"><%= link_to "Activities", activities_url, :class => "menu_link" %></span>
 					<span class="menu_item"><%= link_to "Users", users_url, :class => "menu_link" %></span>
