--- a/app/views/time_entries/index.html.erb
+++ b/app/views/time_entries/index.html.erb
@@ -41,6 +41,7 @@
 <% end %>
 <p>  
 	<% form_tag '/time_entries/new', :method => :get do -%>
+		<%= hidden_field_tag "date", @date %>
 		<%= select "activity", "activity_id", @activity_options %>
 		<%= submit_tag "Add selected activity to this week" %>
 	<% end -%>
