--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -12,7 +12,7 @@
   </p>
   <p>
     <%= f.label :category %>
-    <%= collection_select(:activity, :category_id, @categories, :id, :name) %>
+    <!--%= collection_select(:activity, :category_id, @categories, :id, :name) %-->
   </p>
   <p>
 	<%= f.check_box :active %>
@@ -22,6 +22,7 @@
 	<%= f.check_box :default_activity %> 
 	<%= f.label :default_activity %>
   </p>
+  <p>
   	<%= f.submit "Create" %>
   </p>
 <% end %>
