--- a/app/views/tag_types/index.html.erb
+++ b/app/views/tag_types/index.html.erb
@@ -1,9 +1,15 @@
 <p class="notice"><%= flash[:notice] %></p>
 <p class="error"><%= flash[:error] %></p>
-<h1>Categories</h1>
+<h1>Tag Categories</h1>
+
 <hr/>
+<%= link_to "Activities", activities_url %> |
+<%= link_to "Manage Tags", tags_url %> |
+Tag Categories
+  <hr/>
+
 <table>
-	<% @categories.each do |c| -%>
+	<% @tag_types.each do |c| -%>
 		<tr>
 				<td><%= c.name %></td>
 				<td><%= link_to "Remove", :action => "destroy", :id => c %></td>
@@ -12,8 +18,8 @@
 </table>
 <hr/>
 <p>
-	<% form_for :category, @category, :url => {:action => "create"} do |f| -%>
-		Category Name: <%= f.text_field :name %>
+	<% form_for :tag_type, @tag_type, :url => {:action => "create"} do |f| -%>
+		Tag Name: <%= f.text_field :name %>
 		<%= submit_tag "Create" %>
 	<% end -%>
 </p>
