Added some tests for TimeEntryController

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 							<%= image_tag "Conductlogo.jpg", :alt => "Conduct logo", :id => "conduct_logo" %>
 						</a>
 					</p>
-				<div>
+				</div>				
 			</div>
 		</div>
 	</body>
