--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -13,7 +13,7 @@ Activities |
       <% unless tag_type.tags.empty? %>
         <label><%= tag_type.name %></label>
         <%= select_tag( tag_type.name, '<option value="none">---</option><option value="all">all</option>' +  options_from_collection_for_select( tag_type.tags, 'id', 'name', '---') ) %>
-        &nbsp;
+        &nbsp;<%= "OR" unless tag_type == @tag_types.last %>
       <% end %>
     <% end %>
     <%= submit_tag 'Update' %>
@@ -25,7 +25,9 @@ Activities |
   <hr/>
   <div>
     <b>Name:</b> <%= link_to a.name, edit_activity_path(a) %><br/>
-    <b>Tags:</b> <%# a.tags.collect{ |t| "#{t.name}(#{t.tag_type_name})" }.join(', ')  -%><br/>
+    <b>Tags:</b> <% a.tags.each do |t| %>
+      <%=  "#{t.name}(#{t.tag_type_name})" -%>,
+    <% end %> <br/>
     <b>Description:</b> <%= a.description %><br/>
     <b>Created:</b> <%= a.created_at.to_date %><br/>
 	<b>Active:</b> <%= if a.active then 'Yes' else 'No' end %><br/>
