--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -5,26 +5,31 @@
 <%= link_to "Activities", activities_url %> |
 Manage Tags |
 <%= link_to "Tag Categories", tag_types_url %>
-  <hr/>
- 	<%= @tag_types.collect { |tt|
-		link_to tt.name, :action => 'index', :tag_type => tt.id }.join(' | ') %>
-        
-  <hr/>
+<hr/>
+<%= @tag_types.collect { |tt|
+  link_to tt.name, :action => 'index', :tag_type => tt.id }.join(' | ') %>
+
+<hr/>
 <table>
-	<% @tags.each do |c| -%>
-		<tr>
-				<td><%= c.name_and_type %></td>
-				<td><%= link_to "Remove", :action => "destroy", :id => c %></td>
-		</tr>
-	<% end -%>
+  <% @tags.each do |tag| -%>
+    <tr>
+      <td><%= tag.tag_type_name %> - <%= link_to tag.name, :action => 'edit', :id => tag %></td>
+      <td><%= link_to 'Destroy', tag_path(tag), :method => :delete %></td>
+    </tr>
+  <% end -%>
 </table>
 <hr/>
 <p>
-  <% if params[:tag_type] %>
-    <% form_for :tag, @tag, :url => {:action => "create"} do |f| -%>
-		New tag: <%= f.text_field :name %>
-                <%= f.hidden_field(:tag_type_id, :value => params[:tag_type]) %>
-        <%= submit_tag "Create" %>
+
+  <% form_for Tag.new do |f| -%>
+    <% if params[:tag_type] %>
+      New <%= @tags[0].tag_type.name -%> tag: <%= f.text_field :name %>
+      <%= f.hidden_field(:tag_type_id, :value => params[:tag_type]) %>
+    <% else %>          
+      New tag: <%= f.text_field :name %>
+      <%= collection_select(:tag, :tag_type_id, @tag_types, :id, :name) %>
     <% end -%>
-  <% end %>
+    <%= submit_tag "Create" %>
+  <% end -%>
+
 </p>
