--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,15 +1,9 @@
 <p class="notice"><%= flash[:notice] %></p>
 <p class="error"><%= flash[:error] %></p>
 <h1>Manage Tags</h1>
-<hr/>
-<%= link_to "Activities", activities_url %> |
-Manage Tags |
-<%= link_to "Tag Categories", tag_types_url %>
-<hr/>
-<%= @tag_types.collect { |tt|
-  link_to tt.name, :action => 'index', :tag_type => tt.id }.join(' | ') %>
 
-<hr/>
+  <%= render :partial => 'activities/sub_menu', :locals => { :tag_types => @tag_types } -%>
+
 <table>
   <% @tags.each do |tag| -%>
     <tr>
@@ -23,7 +17,7 @@ Manage Tags |
 
   <% form_for Tag.new do |f| -%>
     <% if params[:tag_type] %>
-      New <%= @tags[0].tag_type.name -%> tag: <%= f.text_field :name %>
+      New <%= TagType.find(params[:tag_type]).name -%> tag: <%= f.text_field :name %>
       <%= f.hidden_field(:tag_type_id, :value => params[:tag_type]) %>
     <% else %>          
       New tag: <%= f.text_field :name %>
