--- a/app/views/reports/hours.html.erb
+++ b/app/views/reports/hours.html.erb
@@ -18,7 +18,7 @@
   <hr/>
 
 
-<%= @table.to_html() -%>
+<%= render_table @table -%>
 
 <%= render :partial => 'download', :locals => { :params => params } -%>
 
