--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -134,3 +134,46 @@ td.week_entries_hours {
 	border: 0;
 	vertical-align: middle;	
 }
+
+
+/* sub drop down menu */
+
+ul { /* all lists */
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    background:#EEEEEE
+}
+
+li.menu { /* all list items */
+    float: left;
+    position: relative;
+    padding-right:1em;
+}
+
+li.menu a {
+    text-decoration:none;
+    white-space:nowrap;
+    font-size:16px;
+}
+
+li.sub a {
+    font-size:14px;
+}
+
+li.menu ul { /* second-level lists */
+    display: none;
+    position: absolute;
+    top: 1em;
+    left: 0;
+}
+
+li.menu>ul { /* to override top and left in browsers other than IE, which will position to the top right of the containing li, rather than bottom left */
+    top: auto;
+    left: auto;
+    background:#EEEEEE
+}
+
+li.menu:hover ul, li.over ul { /* lists nested under hovered list items */
+    display: block;
+}
