--- a/app/views/time_entries/edit.html.erb
+++ b/app/views/time_entries/edit.html.erb
@@ -3,32 +3,31 @@
 <p>
 	<h2>Week: <%= @date.cweek %></h2>
 </p>
-<p> 
-	<% form_for @user, :url => { :controller => "time_entries", :action => "update" }, :builder => TimeEntriesFormBuilder do |user_form| -%>
-		<%= hidden_field_tag "date", @date %>
+<p>  
+	<% form_tag('/time_entries/update') do -%>
+		<%# hidden_field_tag "date", @date %>
 		<table>
 			<% @time_entries.sort.each do |time_entry|  -%>
-				<% user_form.fields_for(:time_entries, time_entry) do |time_entry_form| -%>
-					<%= time_entry_form.hidden_field :date %>
+					<% day = time_entry.date.cwday %>
+					<%= hidden_field_tag "#{day}-id", time_entry.id %>
+					<%= hidden_field_tag "#{day}-date", time_entry.date %>
 					<tr>
 					<td>
-						<%= date_label_for time_entry_form.object %>
+						<%= date_label_for time_entry %>
 					</td>
 					<td>
-						<%= time_entry_form.label :hours, "Hours" %>
-						<%= time_entry_form.lock_checking_text_field :hours, :size => 5 %>
+						<%= label_tag "Hours" %>
+						<%= text_field_tag :hours, time_entry.hours, :size => 5, :id => "#{day}-hours", :name => "#{day}-hours" %>
 					</td>
 					<td>
-						<%= time_entry_form.label :notes, "Notes" %>
-						<%= time_entry_form.lock_checking_text_field :notes, :size => 65 %>
+						<%= label_tag :notes, "Notes" %>
+						<%= text_field_tag :notes, time_entry.notes, :size => 65, :id => "#{day}-notes", :name => "#{day}-notes" %>
 					</td>
 					</tr>
-				<% end -%>
 			<% end -%>
 		</table>
 		<p>
-			<%= user_form.submit "Submit" %>
-			<%= user_form.error_messages %>
+			<%= submit_tag "Submit" %>
 		</p>
 	<% end -%>
 	<%= link_to "Back", { :controller => "time_entries", :action => "index", :date => @date } %>
