--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,16 @@
 				<% if defined? @current_user_session -%>
                     <span class="menu_item"><%= link_to "Time Entry", time_entries_url, :class => "menu_link" %></span>
 					<span class="menu_item"><%= link_to "Review Month", month_url, :class => "menu_link" %></span>
-					<span class="menu_item"><%= link_to "Reports", reports_url, :class => "menu_link" %></span>
-					<span class="menu_item"><%= link_to "Activities", activities_url, :class => "menu_link" %></span>
-					<span class="menu_item"><%= link_to "Users", users_url, :class => "menu_link" %></span>
+					<% if @current_user.admin -%>
+						<span class="menu_item"><%= link_to "Reports", reports_url, :class => "menu_link" %></span>
+						<span class="menu_item"><%= link_to "Activities", activities_url, :class => "menu_link" %></span>
+						<span class="menu_item"><%= link_to "Users", users_url, :class => "menu_link" %></span> 
+					<% end -%>
 					<span class="menu_item"><%= link_to "Logout", {:controller => "user_sessions", :action => "destroy"}, :method => :delete, :class => "menu_link" %></span>
 			    <% else -%>
 					<span class="menu_item"><%= link_to "Login", new_user_session_url, :class => "menu_link" %></span>
 				<% end -%>
 			</div>
-
-
 
 			<div id="main">
 				<div class="content">
