--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 	<head>
 		<title>TimeFlux - the open and easy way of time management and billing</title>
 		<%= stylesheet_link_tag "application" %>
+                <%= stylesheet_link_tag "pagination" %>
 	</head>
 	<body>
 		<div id="container">
