added summary to month review

--- a/app/views/month/_select_view.erb
+++ b/app/views/month/_select_view.erb
@@ -1,5 +1,6 @@
 <p>
 <%=  link_to "Week view", :action => 'week' %> |
 <%=  link_to "Month view", :action => 'month' %> |
+<%=  link_to "Summary", :action => 'summary' %> |
 <%=  link_to "Listing", :action => 'listing' %>
 </p>
