--- a/app/views/month/week.html.erb
+++ b/app/views/month/week.html.erb
@@ -15,10 +15,14 @@
 
   <h2>Week view</h2>
   <table>
-     <tr>
-  <% @day.beginning_of_week.upto last_in_month.end_of_week  do |d| %>
-    <%= '</tr><tr><th>'+d.cweek.to_s+'</ht>' if d.wday == 1 %>
-    <td <%= 'class ="grayed"' if d.month != @day.month%> ><%= @user.hours_on_day d -%></td>
-  <% end %>
-    </tr>
-  </table>
+    <tr>
+      <% @day.beginning_of_week.upto last_in_month.end_of_week  do |d| %>
+        <% if d.wday == 1 %>
+        </tr><tr><th><%=d.cweek.to_s%></ht>
+          <% end %>
+        <td <%= 'class ="grayed"' if d.month != @day.month%> ><%= @user.hours_on_day d -%></td>
+<% end %>
+      </tr>
+    </table>
+
+  <!--%=# render :partial => 'summary',:locals => { :activities_summary => @activities_summary } -%-->
